# zenbook-duo-linux

./: .gitignore  README.md  bump-version.sh  check.sh  display-hyprland.sh  duo.sh  install-rust-runtime.sh  install-ui.sh  install.sh  setup-common.sh  setup-gnome.sh  setup-hyprland.sh  setup-kde.sh  setup-niri.sh  setup.sh  uninstall.sh
ui-tauri-react/src-tauri/: Cargo.toml  tauri.conf.json
ui-tauri-react/src-tauri/capabilities/: default.json
ui-tauri-react/src-tauri/linux/: zenbook-duo-control.desktop
ui-tauri-react/src-tauri/src/: hotkeys.rs  lib.rs  main.rs  usb_media_remap_helper.rs
ui-tauri-react/src-tauri/src/commands/: backlight.rs  diagnostics.rs  display.rs  events.rs  hotkeys.rs  logs.rs  mod.rs  profiles.rs  service.rs  settings.rs  status.rs  theme.rs  touchscreen.rs  usb_media_remap.rs
ui-tauri-react/src-tauri/src/hardware/: display_config.rs  duo.rs  hid.rs  mod.rs  sysfs.rs  touchscreen.rs
ui-tauri-react/src-tauri/src/hardware/display_layout/: adapters.rs  (+4 more)
ui-tauri-react/src-tauri/src/ipc/: protocol.rs
ui-tauri-react/src-tauri/src/models/: event.rs  mod.rs  profile.rs  settings.rs  status.rs  version.rs
ui-tauri-react/src-tauri/src/runtime/: bluetooth_hotkeys.rs  client.rs  compositor.rs  daemon.rs  host.rs  logger.rs  logind.rs  mod.rs  monitor.rs  paths.rs  policy.rs  probe.rs  router.rs  runtime_dir.rs  service_control.rs  session.rs  session_agent.rs  session_display_planner.rs  session_ipc.rs  session_watchers.rs  state.rs  version.rs
ui-tauri-react/src-tauri/src/watchers/: dbus_watcher.rs  file_watcher.rs  mod.rs  usb_watcher.rs
(+94 files in other folders)
