[package]
name = "zenbook-duo-control"
version = "0.2.0"
edition = "2021"
description = "Zenbook Duo Linux Control Panel"
default-run = "zenbook-duo-control"

[lib]
name = "zenbook_duo_control_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "zenbook-duo-control"
path = "src/main.rs"

[[bin]]
name = "usb-media-remap"
path = "src/bin/usb-media-remap.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
notify = "7"
rusb = "0.9"
zbus = "5"
nix = { version = "0.29", features = ["ioctl", "fs", "user", "signal", "process"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
futures-util = "0.3"
libc = "0.2"
evdev = "0.12"
signal-hook = "0.3"
